2003-12-29  Sebastien Pouliot  <spouliot@videotron.ca>

	* EnvironmentPermissionAttributeTest.cs: Updated to test default
	properties, Actions, get for All (1.1) and Unrestricted.
	* FileDialogPermissionAttributeTest.cs: Updated to test default
	properties, Actions and Unrestricted.
	* FileIOPermissionAttributeTest.cs: Updated to test default
	properties, Actions, get for All (1.1) and Unrestricted.
	* IsolatedStorageFilePermissionAttributeTest.cs: New.
	* PermissionSetAttributeTest.cs: New.
	* PrincipalPermissionAttributeTest.cs: Updated to test default
	properties, Actions and Unrestricted.
	* PublisherIdentityPermissionAttributeTest.cs: Updated to test default
	properties, Actions and Unrestricted.
	* ReflectionPermissionAttributeTest.cs: Updated to test default
	properties, Actions and Unrestricted.
	* RegistryPermissionAttributeTest.cs: New.
	* SecurityPermissionAttributeTest.cs: New.
	* SiteIdentityPermissionAttributeTest.cs: New.
	* StrongNameIdentityPermissionAttributeTest.cs: New.
	* StrongNamePublicKeyBlobTest.cs: Converted to NUnit2 format.
	* UIPermissionAttributeTest.cs: New.
	* UrlIdentityPermissionAttributeTest.cs: New.
	* ZoneIdentityPermissionAttributeTest.cs: New.

2003-10-21  Nick Drochak <ndrochak@gol.com>

	* FileIOPermissionAttributeTest.cs: Handle Short File Name vs. Long
	File Name messiness.  This probably needs to be worked on for the 
	tests to work on Linux, etc.

2003-07-01  Sebastien Pouliot  <spouliot@videotron.ca>

	* PrincipalPermissionAttributeTest.cs: New.
	* PrincipalPermissionTest.cs: New.

2003-06-29  Sebastien Pouliot  <spouliot@videotron.ca>

	* ReflectionPermissionAttributeTest.cs: New.
	* ReflectionPermissionTest.cs: New.

2003-06-29  Nick Drochak <ndrochak@gol.com>

	* FileIOPermissionAttributeTest.cs: Don't use windows path name.

2003-06-28  Sebastien Pouliot  <spouliot@videotron.ca>

	* EnvironmentPermissionAttributeTest.cs: New.
	* EnvironmentPermissionTest.cs: New.
	* FileDialogPermissionAttributeTest.cs: New.